// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImmutableListView renders Map: List rows, with section headers 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": NaN,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={
    Array [
      0,
      4,
      6,
      7,
    ]
  }
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text
      header={true}
    >
      first (3 items)
    </Text>
    <Text>
      "m"
    </Text>
    <Text>
      "a"
    </Text>
    <Text>
      "p"
    </Text>
    <Text
      header={true}
    >
      second (1 items)
    </Text>
    <Text>
      "foo"
    </Text>
    <Text
      header={true}
    >
      third (0 items)
    </Text>
    <Text
      header={true}
    >
      fourth (1 items)
    </Text>
    <Text>
      "bar"
    </Text>
  </View>
</RCTScrollView>
`;

exports[`ImmutableListView renders Map: List rows, without section headers 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 4,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text>
      ["m","a","p"]
    </Text>
    <Text>
      ["foo"]
    </Text>
    <Text>
      []
    </Text>
    <Text>
      ["bar"]
    </Text>
  </View>
</RCTScrollView>
`;

exports[`ImmutableListView renders Map: Map rows, with section headers 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": NaN,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={
    Array [
      0,
      3,
    ]
  }
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text
      header={true}
    >
      first (2 items)
    </Text>
    <Text>
      "data 1"
    </Text>
    <Text>
      "data 2"
    </Text>
    <Text
      header={true}
    >
      second (0 items)
    </Text>
  </View>
</RCTScrollView>
`;

exports[`ImmutableListView renders Map: Map rows, without section headers 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 2,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text>
      {"row1":"data 1","row2":"data 2"}
    </Text>
    <Text>
      {}
    </Text>
  </View>
</RCTScrollView>
`;

exports[`ImmutableListView renders basic List 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 3,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text>
      "lists"
    </Text>
    <Text>
      "are"
    </Text>
    <Text>
      "great"
    </Text>
  </View>
</RCTScrollView>
`;

exports[`ImmutableListView renders basic Range 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 3,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text>
      3
    </Text>
    <Text>
      6
    </Text>
    <Text>
      9
    </Text>
  </View>
</RCTScrollView>
`;

exports[`ImmutableListView renders basic Set 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 3,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text>
      "one"
    </Text>
    <Text>
      "two"
    </Text>
    <Text>
      "three"
    </Text>
  </View>
</RCTScrollView>
`;

exports[`ImmutableListView renders nested List 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 2,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text>
      ["so","are"]
    </Text>
    <Text>
      ["nested","lists"]
    </Text>
  </View>
</RCTScrollView>
`;

exports[`ImmutableListView renders with empty data 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 1,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text
      style={
        Object {
          "padding": 8,
          "textAlign": "center",
        }
      }
    >
      No data.
    </Text>
  </View>
</RCTScrollView>
`;

exports[`ImmutableListView with delayed rendering renders basic List after interactions 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 3,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text>
      "lists"
    </Text>
    <Text>
      "are"
    </Text>
    <Text>
      "great"
    </Text>
  </View>
</RCTScrollView>
`;

exports[`ImmutableListView with delayed rendering renders basic List during interactions 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 1,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text>
      "lists"
    </Text>
  </View>
</RCTScrollView>
`;

exports[`ImmutableListView with renderEmpty doesn't render empty with null 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 0,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View />
</RCTScrollView>
`;

exports[`ImmutableListView with renderEmpty renders empty with a function 1`] = `
<Text>
  "No items"
</Text>
`;

exports[`ImmutableListView with renderEmpty renders empty with a string 1`] = `
<Text
  style={
    Array [
      Object {
        "padding": 8,
        "textAlign": "center",
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  No items
</Text>
`;

exports[`ImmutableListView with renderEmpty renders normally when there are some items 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 3,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text>
      "lists"
    </Text>
    <Text>
      "are"
    </Text>
    <Text>
      "great"
    </Text>
  </View>
</RCTScrollView>
`;

exports[`ImmutableListView with renderEmptyInList doesn't render empty with null 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 0,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View />
</RCTScrollView>
`;

exports[`ImmutableListView with renderEmptyInList renders empty with a function 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 1,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text>
      "No items"
    </Text>
  </View>
</RCTScrollView>
`;

exports[`ImmutableListView with renderEmptyInList renders empty with a string 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  contentContainerStyle={
    Object {
      "color": "red",
    }
  }
  dataSource={
    ListViewDataSource {
      "items": 1,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text
      style={
        Object {
          "padding": 8,
          "textAlign": "center",
        }
      }
    >
      No items
    </Text>
  </View>
</RCTScrollView>
`;

exports[`ImmutableListView with renderEmptyInList renders normally when there are some items 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 3,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text>
      "lists"
    </Text>
    <Text>
      "are"
    </Text>
    <Text>
      "great"
    </Text>
  </View>
</RCTScrollView>
`;
